Fix/condition teeth data (#136)
* fix: update insert statements in changelog.sql

* fix: add missing toothface_conditions entries in changelog.sql

* refactor: rename 'tooths' to 'teeth' and update related mappings in Odontogram classes

* feat: add idPatientClinicalHistory field to OdontogramRequest and update related services

* feat: update OdontogramRequest to use idQuestion and add idPatientClinicalHistory; refactor OdontogramService methods for improved clarity

* feat: add idFormSection field to OdontogramRequest and update OdontogramService methods for improved functionality

* refactor: remove debug print statements from FormSectionService